fixed action button wrapping

--- a/client/src/app/shared/components/sortable-pageable-table/sortable-pageable-table.component.scss
+++ b/client/src/app/shared/components/sortable-pageable-table/sortable-pageable-table.component.scss
@@ -1,1 +1,4 @@
-
+.action-container {
+  display: flex;
+  flex-flow: row wrap;
+}
